Bevel tool crashes Blender if the number of segments exceeds 28 #33305

Closed
opened 2012-11-25 18:06:24 +01:00 by Sebastian Michailidis · 5 comments

%%%The crash does not appear if the edges form a 4-sided face.

Blender 2.64.9 r52536 64bits from builder.blender.org
Windows 7 64 bits, GTX 570 & GTX 580%%%

%%%The crash does not appear if the edges form a 4-sided face. Blender 2.64.9 r52536 64bits from builder.blender.org Windows 7 64 bits, GTX 570 & GTX 580%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Please attach a .blend file where this happens? Doing bevel with 30 segments on a Monkey object does not crash here.%%%

%%%Please attach a .blend file where this happens? Doing bevel with 30 segments on a Monkey object does not crash here.%%%

%%%I now have uploaded a demo file. Just go into edit mode, select an edge and increase the amount of segments to more than 28 with the mouse wheel.%%%

%%%I now have uploaded a demo file. Just go into edit mode, select an edge and increase the amount of segments to more than 28 with the mouse wheel.%%%

%%%good find! was a bug in the array growing function - strange we didn't hit this in other areas of the code - fixed r52554%%%

%%%good find! was a bug in the array growing function - strange we didn't hit this in other areas of the code - fixed r52554%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33305
No description provided.