fix [#33305] Bevel tool crashes Blender if the number of segments exceeds 28

this was infact a general bug in BLI_array_grow_items(), surprising we didnt run into it before.
- growing the array for the first time would use the static var even if it wasn't big enough.